--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,9 +43,16 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/hanuberarilor.jpg
+    - assets/images/carucubere.jpg
+    - assets/images/hanuluimanuc.jpg
+    - assets/images/secondcup.jpg
+    - assets/images/bernschutz.jpg
+    - assets/images/cameradinfata.jpg
+    - assets/images/silverchurch.jpg
+    - assets/images/oktoberfest.jpg
+    - assets/images/kulturhaus.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
