--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,11 +6,14 @@
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="hyuga_app"
-        android:icon="@mipmap/ic_launcher"> 
+        android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyDNdhCM43QwuN5t98P282RENyCUQ7H9erw"/> 
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
