--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cloud_firestore: ^0.13.4
   provider: ^4.0.4
   geolocator: ^5.3.0
+  google_maps_flutter: ^0.5.24+1
 
 dev_dependencies:
   flutter_test:
@@ -79,6 +80,9 @@ flutter:
     - family: Roboto
       fonts:
         - asset: fonts/Roboto-Regular.ttf
+    - family: Comfortaa
+      fonts:
+        - asset: fonts/Comfortaa-Regular.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
