--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,13 +27,14 @@ dependencies:
   cupertino_icons: ^0.1.2
   firebase_auth: 0.15.3
   cloud_firestore: ^0.13.4
-  provider: ^4.0.4
   geolocator: ^5.3.0
   google_maps_flutter: ^0.5.24+1
   latlong: ^0.6.1
+  provider: ^4.0.5
 
-dependency_overrides:
-  firebase_core: 0.4.4
+# Commented
+# dependency_overrides:
+#   firebase_core: 0.4.4
 
 dev_dependencies:
   flutter_test:
