--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,12 +25,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  firebase_auth: 0.15.3
+  firebase_auth: ^0.16.0
   cloud_firestore: ^0.13.4
   geolocator: ^5.3.0
   google_maps_flutter: ^0.5.24+1
   latlong: ^0.6.1
   provider: ^4.0.5
+  rxdart: ^0.24.0
+  google_sign_in: ^4.4.4
+  #flutter_facebook_login: ^3.0.0
 
 # Commented
 # dependency_overrides:
