--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.INTERNET"/> <!--Added for internet permission (for facebook login)-->
+    <uses-permission android:name="android.permission.CAMERA" /> <!--Added for camera permission (for QR scanning)-->
+
 
     <application
         android:name="io.flutter.app.FlutterApplication"
