--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -26,6 +26,9 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<!--asks permission for camera-->
+	<key>NSCameraUsageDescription</key>
+	<string>Hyuga requires permission for your camera</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
@@ -43,10 +46,10 @@
 	<false/>
 
 	<!--add for location permissions-->
-    	<key>io.flutter.embedded_views_preview</key>
-    	<string>YES</string>
-    	<key>NSLocationWhenInUsageDescription</key>
-    	<string>I need location permission when in use.</string>
+	<key>io.flutter.embedded_views_preview</key>
+	<string>YES</string>
+	<key>NSLocationWhenInUsageDescription</key>
+	<string>Hyuga requires permission for your location</string>
 	
 </dict>
 </plist>
