--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   shimmer: ^1.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  font_awesome_flutter: ^8.8.1  
   cupertino_icons: ^0.1.2
   firebase_auth: ^0.16.0
   cloud_firestore: ^0.13.4
@@ -35,6 +36,13 @@ dependencies:
   google_sign_in: ^4.4.4
   flutter_facebook_login: ^3.0.0
   http: ^0.12.1
+  qr_flutter: ^3.2.0
+  #qrscan: ^0.2.17
+  # qr_code_scanner: ^0.0.13
+  # qr_flutter:
+  #   git:
+  #     url: git://github.com/lukef/qr.flutter.git
+  
 
 # Commented
 # dependency_overrides:
@@ -57,7 +65,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/empty-profile.png
   
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
