--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,7 @@ dependencies:
   flutter_facebook_login: ^3.0.0
   http: ^0.12.1
   qr_flutter: ^3.2.0
-  #qrscan: ^0.2.17
-  # qr_code_scanner: ^0.0.13
-  # qr_flutter:
-  #   git:
-  #     url: git://github.com/lukef/qr.flutter.git
+  barcode_scan: ^3.0.1
   
 
 # Commented
