--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   qr_flutter: ^3.2.0
   barcode_scan: ^3.0.1
   cloud_functions: ^0.5.0
+  charts_flutter: ^0.9.0
   
 
 # Commented
