--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   firebase_auth: ^0.16.0
   cloud_firestore: ^0.13.4
-  geolocator: ^5.3.0
+  #geolocator: ^5.3.0
+  location: ^3.0.2
   google_maps_flutter: ^0.5.24+1
   latlong: ^0.6.1
   provider: ^4.0.5
@@ -40,6 +41,8 @@ dependencies:
   barcode_scan: ^3.0.1
   cloud_functions: ^0.5.0
   charts_flutter: ^0.9.0
+  curl: ^1.0.0
+
   
 
 # Commented
