aditional changes added

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -95,7 +95,9 @@
 	<!--add for location permissions-->
 	<key>io.flutter.embedded_views_preview</key>
 	<string>YES</string>
-	<key>NSLocationWhenInUsageDescription</key>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Hyuga requires permission for your location</string>
+	<key>NSLocationAlwaysUsageDescription</key>
 	<string>Hyuga requires permission for your location</string>
 	
 </dict>
