--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,11 @@ dependencies:
   barcode_scan: ^3.0.1
   cloud_functions: ^0.5.0
   charts_flutter: ^0.9.0
-  curl: ^1.0.0
+  #curl: ^1.0.0 for uber button(maybe)
   intl: ^0.16.1
+  firebase_analytics: ^5.0.16
+  apple_sign_in: ^0.1.0 #available only for IOS
+
 
 
   
