Tudor's Changes, Swapped png logo for jpg logo Changed some sizes

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   intl: ^0.16.1
   firebase_analytics: ^5.0.16
   apple_sign_in: ^0.1.0 #available only for IOS
+  geocoder: ^0.2.1
+
 
 
 
