--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>1009284415459-n0e4l57op06nm5lqoh2hrrlhu00t8ogh.apps.googleusercontent.com</string>
+	<string>1009284415459-gv4oq804bhads0mmefi4lc2emhs57teo.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.1009284415459-n0e4l57op06nm5lqoh2hrrlhu00t8ogh</string>
+	<string>com.googleusercontent.apps.1009284415459-gv4oq804bhads0mmefi4lc2emhs57teo</string>
 	<key>ANDROID_CLIENT_ID</key>
 	<string>1009284415459-cs30dcj5jvfqi4c2hjr2un0afvq8n6pt.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
@@ -15,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.hyuga.hyugaApp</string>
+	<string>ro.hyuga.hyugaApp</string>
 	<key>PROJECT_ID</key>
 	<string>hyuga-app</string>
 	<key>STORAGE_BUCKET</key>
@@ -31,7 +31,7 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:1009284415459:ios:1be9d3ec62747a64326ad6</string>
+	<string>1:1009284415459:ios:7eab1cbdcfd3d460326ad6</string>
 	<key>DATABASE_URL</key>
 	<string>https://hyuga-app.firebaseio.com</string>
 </dict>
