--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -15,20 +15,51 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>$(FLUTTER_BUILD_NAME)</string>
+	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.1009284415459-gv4oq804bhads0mmefi4lc2emhs57teo</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb2317348558566656</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
-	<string>$(FLUTTER_BUILD_NUMBER)</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>FacebookAppID</key>
+	<string>2317348558566656</string>
+	<key>FacebookDisplayName</key>
+	<string>Hyuga</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>fbapi</string>
+		<string>fb-messenger-share-api</string>
+		<string>fbauth2</string>
+		<string>fbshareextension</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Hyuga requires permission for your camera</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Hyuga requires permission for your location</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Hyuga requires permission for your location</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
-	<!--asks permission for camera-->
-	<key>NSCameraUsageDescription</key>
-	<string>Hyuga requires permission for your camera</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
@@ -44,61 +75,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-
-    <!-- Put me in the [my_project]/ios/Runner/Info.plist file -->
-    <!-- Facebook Log In & Google Sign-in Section -->
-    <key>CFBundleURLTypes</key>
-    <array>
-    	<dict>
-    	    <!-- Added for Google Sign In -->
-    		<key>CFBundleTypeRole</key>
-    		<string>Editor</string>
-    		<key>CFBundleURLSchemes</key>
-    		<array>
-    			<!-- TODO Replace this value: -->
-    			<!-- Copied from GoogleService-Info.plist key REVERSED_CLIENT_ID -->
-    			<string>com.googleusercontent.apps.1009284415459-n0e4l57op06nm5lqoh2hrrlhu00t8ogh</string>
-    		</array>
-    	</dict>
-    	<!-- End of the Google Sign-in Section -->
-    	<dict>
-    	    <!-- Added for Facebook LogIn -->
-            <key>CFBundleURLSchemes</key>
-            <array>
-                <!--
-                  Replace "000000000000" with your Facebook App ID here.
-                  **NOTE**: The scheme needs to start with `fb` and then your ID.
-                -->
-                <string>fb2317348558566656</string>
-            </array>
-        </dict>
-    <!-- ADDED FOR FACEBOOK LOGIN-->
-    </array>
-    <key>FacebookAppID</key>
-
-    <!-- Replace "000000000000" with your Facebook App ID here. -->
-    <string>2317348558566656</string>
-    <key>FacebookDisplayName</key>
-
-    <!-- Replace "YOUR_APP_NAME" with your Facebook App name. -->
-    <string>Hyuga</string>
-
-    <key>LSApplicationQueriesSchemes</key>
-    <array>
-        <string>fbapi</string>
-        <string>fb-messenger-share-api</string>
-        <string>fbauth2</string>
-        <string>fbshareextension</string>
-    </array>
-    <!-- END OF CREDENTIAL SIGN IN SECTION -->
-
-	<!--add for location permissions-->
 	<key>io.flutter.embedded_views_preview</key>
 	<string>YES</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Hyuga requires permission for your location</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Hyuga requires permission for your location</string>
-	
 </dict>
 </plist>
