--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -51,15 +51,15 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>Hyuga requires permission for your camera</string>
+	<string>Hyuga requires permission for your camera in order to be able to scan codes</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Hyuga requires permission for your location</string>
+	<string>Hyuga requires permission for your location in order to find every place around you</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Hyuga requires permission for your location</string>
+	<string>Hyuga requires permission for your location in order to find every place around you</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Hyuga requires permission for your microphone</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Hyuga requires permission for your gallery</string>
+	<string>Hyuga requires permission for your gallery in order to be able to pick images</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
