--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   apple_sign_in: ^0.1.0 #available only for IOS
   geocoder: ^0.2.1
   photo_view: ^0.9.2
+  url_launcher: ^5.5.1
+
 
   
 
