--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -60,6 +60,11 @@
 	<string>Hyuga requires permission for your microphone</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Hyuga requires permission for your gallery in order to be able to pick images</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
