--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   firebase_messaging: ^7.0.0
   firebase_core: ^0.5.0
   googleapis: ^0.55.0
+  permission_handler: ^5.0.1+1
+  
 
   
 
