--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   firebase_core: ^0.5.0
   #googleapis: ^0.55.0
   permission_handler: ^5.0.1+1
+  expansion_card: ^0.1.0
+
   
 
   
