--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,8 @@ dependencies:
   barcode_scan: ^3.0.1
   #cloud_functions: ^0.5.0
   charts_flutter: ^0.9.0
-  #curl: ^1.0.0 for uber button(maybe)
+  # for uber button(maybe)
+  curl: ^1.0.0
   intl: ^0.16.1
   firebase_analytics: ^5.0.16
   apple_sign_in: ^0.1.0 #available only for IOS
