Added notification icon

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -20,12 +20,9 @@
         <!-- <meta-data
         android:name="com.google.firebase.messaging.default_notification_icon"
         android:resource="@mipmap/ic_stat_ic_notification" /> -->
-        <!-- <meta-data
-        android:name="com.google.firebase.messaging.default_notification_icon"
-        android:resource="@drawable/transparent.png" />
         <meta-data
-            android:name="com.google.firebase.messaging.default_notification_color"
-            android:resource="@color/colorPrimary" /> -->
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/notification" />>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
