--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,6 +87,7 @@ flutter:
   assets:
     - assets/images/empty-profile.png
     - assets/images/google-logo-icon.png
+    - assets/images/hyuga-logo.png
   
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
