--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -95,6 +95,7 @@ flutter:
     - assets/gifs/fifth-slide.gif
     - assets/images/gaseste_localul_perfect.png
     - assets/images/reducerile_de_astazi.png
+    - assets/images/stars.png
   
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
