--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -60,6 +60,18 @@
 	<string>Hyuga requires permission for your microphone</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Hyuga requires permission for your gallery in order to be able to pick images</string>
+	<!-- Added in order to solve rejection on App Store Connect(none are in use) -->
+	<key>NSContactsUsageDescription</key>
+	<string>Hyuga requires permission for your contacts</string>
+	<key>NSCalendarsUsageDescription</key>
+	<string>Hyuga requires permission for your calendar</string>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>Hyuga requires permission for your Apple Music Library</string>
+	<key>NSMotionUsageDescription</key>
+	<string>Hyuga requires permission for your phone's motion</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>Hyuga requires permission for speech recognition</string>
+	<!-- -->
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>fetch</string>
