--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -8,17 +8,18 @@ if (localPropertiesFile.exists()) {
 
 def flutterRoot = localProperties.getProperty('flutter.sdk')
 if (flutterRoot == null) {
-    throw new GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
+    // throw new GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
+    throw new FileNotFoundException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
 }
 
 def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
 if (flutterVersionCode == null) {
-    flutterVersionCode = '2'
+    flutterVersionCode = '3'
 }
 
 def flutterVersionName = localProperties.getProperty('flutter.versionName')
 if (flutterVersionName == null) {
-    flutterVersionName = '2.0'
+    flutterVersionName = '3.0'
 }
 
 // Added for the App release on Android (configures the app's signing process)
@@ -36,7 +37,9 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
+
+    ndkVersion "21.3.6528147"
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
@@ -44,16 +47,22 @@ android {
 
     lintOptions {
         disable 'InvalidPackage'
+        checkReleaseBuilds false
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.hyuga.hyuga_app"
-        minSdkVersion 21 ///  changed from 16 to 21 (for firebase)
-        targetSdkVersion 28
+        minSdkVersion 24 ///  changed from 16 to 21 (for firebase) -- changed from 21 to 24 for qr_scanner
+        targetSdkVersion 29
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        // -------- Added for the launch crash -----------
+        multiDexEnabled true
+        // ndk {
+        //     debugSymbolLevel 'SYMBOL_TABLE'
+        // }
+        // -------------------
     }
 
     // Added for the App release on Android(configures the signingConfigs for the key.properties file)
@@ -69,10 +78,12 @@ android {
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
             signingConfig signingConfigs.release  // <-- line added for the 'signingConfigs' of the release build
             // Signing with the debug keys for now, so `flutter run --release` works.
             // signingConfig signingConfigs.debug
+            // ndk {
+            //     debugSymbolLevel 'SYMBOL_TABLE'
+            // }
         }
     }
 }
@@ -85,7 +96,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.google.firebase:firebase-messaging:20.2.4'
+    implementation 'com.android.support:multidex:1.0.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'  
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 }
