--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,13 +16,13 @@
         android:label="Hyuga"
         android:icon="@mipmap/hyuga">
         <meta-data android:name="com.google.android.geo.API_KEY"
-               android:value="AIzaSyDNdhCM43QwuN5t98P282RENyCUQ7H9erw"/> 
-        <!-- <meta-data
-        android:name="com.google.firebase.messaging.default_notification_icon"
-        android:resource="@mipmap/ic_stat_ic_notification" /> -->
+               android:value="AIzaSyDNdhCM43QwuN5t98P282RENyCUQ7H9erw"/>
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
             android:resource="@drawable/notification" />>
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/colorPrimary" />
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
