--- a/android/gradle/wrapper/gradle-wrapper.properties
+++ b/android/gradle/wrapper/gradle-wrapper.properties
@@ -3,4 +3,7 @@ distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https://services.gradle.org/distributions/gradle-5.6.2-all.zip
+# Commented next line(20-Oct-2020) for uploading gradle version for Google Play Console launch
+#distributionUrl=https://services.gradle.org/distributions/gradle-5.6.4-all.zip
+distributionUrl=https://services.gradle.org/distributions/gradle-6.5.1-all.zip
+
