--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: Hyuga App - Find your ideal hangout location.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+4
+version: 1.0.0+5
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -42,7 +42,6 @@ dependencies:
   flutter_facebook_login: ^3.0.0
   http: ^0.12.1
   qr_flutter: ^3.2.0
-  barcode_scan: ^3.0.1
   #cloud_functions: ^0.5.0
   charts_flutter: ^0.9.0
   # for uber button(maybe)
@@ -58,6 +57,8 @@ dependencies:
   #googleapis: ^0.55.0
   permission_handler: ^5.0.1+1
   expansion_card: ^0.1.0
+  qr_code_scanner: ^0.0.13
+
 
   
 
