--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: Hyuga App - Find your ideal hangout location.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+7
+version: 1.0.0+8
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -22,7 +22,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   firebase_storage:
-  image_picker:
+  image_picker: 0.6.7+12
   shimmer: ^1.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -53,7 +53,7 @@ dependencies:
   photo_view: ^0.9.2
   url_launcher: ^5.5.1
   firebase_messaging: ^7.0.0
-  firebase_core: ^0.5.0
+  #firebase_core: ^0.5.0
   #googleapis: ^0.55.0
   permission_handler: ^5.0.1+1
   expansion_card: ^0.1.0
@@ -61,11 +61,11 @@ dependencies:
   animations: ^1.1.2
   firebase_database: ^4.1.0
   facebook_app_events: ^0.9.0
+  square_in_app_payments: ^1.5.1
+  # firebase_ml_vision: ^0.10.0
+  google_ml_kit: ^0.0.3+1
 
   
-
-  
-
 # Commented
 # dependency_overrides:
 #   firebase_core: 0.4.4
