--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -40,7 +40,7 @@
 	<key>FacebookAppID</key>
 	<string>2317348558566656</string>
 	<key>FacebookDisplayName</key>
-	<string>Hyuga</string>
+	<string>Wine Street</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>fbapi</string>
