--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   provider: ^4.0.5
   rxdart: ^0.24.0
   google_sign_in: ^4.4.4
-  flutter_facebook_login: ^3.0.0
+  #flutter_facebook_login: ^3.0.0
   http: ^0.12.1
   qr_flutter: ^3.2.0
   #cloud_functions: ^0.5.0
@@ -65,6 +65,7 @@ dependencies:
   # firebase_ml_vision: ^0.10.0
   google_ml_kit: ^0.0.3+1
   sliding_up_panel: ^1.0.2	
+  flutter_facebook_auth: ^1.0.2
 
 
 
