--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,46 +11,76 @@ description: Hyuga App - Find your ideal hangout location.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+11
+version: 1.0.0+12
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  firebase_storage: ^5.0.0
-  image_picker: 0.6.7+12
+  # firebase_storage: ^5.0.0
+  firebase_storage: 
+  # image_picker: 0.6.7+12
+  image_picker: ^0.8.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  font_awesome_flutter: ^8.8.1  
-  cupertino_icons: ^0.1.2
-  firebase_auth: ^0.18.0+1
-  cloud_firestore: ^0.14.0+2
-  location: ^3.0.2
-  google_maps_flutter: ^0.5.24+1
-  latlong: ^0.6.1
-  provider: ^4.0.5
-  rxdart: ^0.24.0
-  google_sign_in: ^4.4.4
+  # font_awesome_flutter: ^8.8.1
+  font_awesome_flutter:  
+  # cupertino_icons: ^0.1.2
+  cupertino_icons: 
+  # firebase_auth: ^0.18.0+1
+  firebase_auth:
+  # cloud_firestore: ^0.14.0+2
+  cloud_firestore: ^3.1.7
+  # location: ^3.0.2
+  location: 
+  # google_maps_flutter: ^0.5.24+1
+  google_maps_flutter:
+  # latlong: ^0.6.1
+  # latlong:
+  maps_toolkit: ^2.0.0
+  # provider: ^4.0.5
+  provider: 
+  # rxdart: ^0.24.0
+  rxdart:
+  # google_sign_in: ^4.4.4
+  google_sign_in: 
   #flutter_facebook_login: ^3.0.0
-  http: ^0.12.1
-  qr_flutter: ^3.2.0
-  firebase_analytics: ^5.0.16
-  apple_sign_in: ^0.1.0 #available only for IOS
-  geocoder: ^0.2.1
-  url_launcher: ^5.5.1
-  firebase_messaging: ^7.0.0
-  expansion_card: ^0.1.0
-  qr_code_scanner: ^0.0.13
-  animations: ^1.1.2
-  firebase_database: ^4.1.0
+  # http: ^0.12.1
+  http: 
+  # qr_flutter: ^3.2.0
+  qr_flutter: 
+  # firebase_analytics: ^5.0.16
+  firebase_analytics: 
+  # apple_sign_in: ^0.1.0 #available only for IOS
+  # apple_sign_in:
+  sign_in_with_apple:
+  # geocoder: ^0.2.1
+  # geocoder:
+  geocode: ^1.0.1
+  # url_launcher: ^5.5.1
+  url_launcher: 
+  # firebase_messaging: ^7.0.0
+  firebase_messaging: 
+  # expansion_card: ^0.1.0
+  expansion_card:
+  # qr_code_scanner: ^0.0.13
+  qr_code_scanner:
+  # animations: ^1.1.2
+  animations: 
+  # firebase_database: ^4.1.0
+  firebase_database:
   #square_in_app_payments: ^1.5.1
-  google_ml_kit: ^0.0.3+1
-  sliding_up_panel: ^1.0.2	
-  flutter_facebook_auth: ^1.0.2
+  # google_ml_kit: ^0.0.3+1
+  google_ml_kit: 
+  # sliding_up_panel: ^1.0.2	
+  sliding_up_panel:	
+  # flutter_facebook_auth: ^1.0.2
+  flutter_facebook_auth:
+  in_app_purchase: 
 
 
 
