--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -8,8 +8,7 @@ if (localPropertiesFile.exists()) {
 
 def flutterRoot = localProperties.getProperty('flutter.sdk')
 if (flutterRoot == null) {
-    // throw new GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
-    throw new FileNotFoundException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
+    throw new GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
 }
 
 def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
@@ -38,7 +37,6 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
     compileSdkVersion 29
-
     ndkVersion "21.3.6528147"
 
     sourceSets {
@@ -53,16 +51,10 @@ android {
     defaultConfig {
         applicationId "com.hyuga.hyuga_app"
         minSdkVersion 24 ///  changed from 16 to 21 (for firebase) -- changed from 21 to 24 for qr_scanner
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        // -------- Added for the launch crash -----------
-        multiDexEnabled true
-        // ndk {
-        //     debugSymbolLevel 'SYMBOL_TABLE'
-        // }
-        // -------------------
+        // multidexEnabled true
     }
 
     // Added for the App release on Android(configures the signingConfigs for the key.properties file)
@@ -74,9 +66,7 @@ android {
            storePassword keystoreProperties['storePassword']
        }
    }
-    // End of the added configurations
-
-    buildTypes {
+   buildTypes {
         release {
             signingConfig signingConfigs.release  // <-- line added for the 'signingConfigs' of the release build
             // Signing with the debug keys for now, so `flutter run --release` works.
@@ -86,6 +76,15 @@ android {
             // }
         }
     }
+    // End of the added configurations
+
+    compileOptions {
+        // Flag to enable support for the new language APIs
+        coreLibraryDesugaringEnabled true
+        // Sets Java compatibility to Java 8
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 flutter {
@@ -94,11 +93,6 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.google.firebase:firebase-analytics:17.2.2'
-    implementation 'com.google.firebase:firebase-messaging:20.2.4'
-    implementation 'com.android.support:multidex:1.0.3'
-    implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    implementation 'com.google.firebase:firebase-appcheck-debug:16.0.0-beta01'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
 }
