--- a/functions/package.json
+++ b/functions/package.json
@@ -13,8 +13,11 @@
     "node": "10"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.6.1",
+    "dotenv": "^16.0.0",
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.11.0"
+    "firebase-functions": "^3.11.0",
+    "twilio": "^3.75.0"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
