--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,7 +81,7 @@ dependencies:
   # flutter_facebook_auth: ^1.0.2
   flutter_facebook_auth:
   in_app_purchase: 
-  adapty_flutter:
+  #adapty_flutter:
   #firebase_app_check:
   fake_cloud_firestore:
 
