--- a/packages/authentication/pubspec.yaml
+++ b/packages/authentication/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
     sdk: flutter
   firebase_core: ^1.0.3	
   firebase_auth: ^3.4.2
+  firebase_storage:
   # cloud_firestore: ^1.0.2
   cloud_firestore: 
   flutter_facebook_auth:
