--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,76 +16,76 @@ publish_to: 'none'
 version: 1.0.0+16
 
 environment:
-  sdk: ">=2.16.0 <3.0.0"
+  sdk: '>=2.16.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  authentication: 
+  authentication:
     path: ./packages/authentication
   firebase_core:
   # firebase_storage: ^5.0.0
-  firebase_storage: 
+  firebase_storage:
   # image_picker: 0.6.7+12
-  image_picker: 
+  image_picker:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   # font_awesome_flutter: ^8.8.1
-  font_awesome_flutter:  
+  font_awesome_flutter:
   # cupertino_icons: ^0.1.2
-  cupertino_icons: 
+  cupertino_icons:
   # firebase_auth: ^0.18.0+1
   firebase_auth: ^3.4.2
   # cloud_firestore: ^0.14.0+2
-  # cloud_firestore: 
+  # cloud_firestore:
   # location: ^3.0.2
-  location: 
+  location:
   # google_maps_flutter: ^0.5.24+1
   google_maps_flutter:
   # latlong: ^0.6.1
   # latlong:
   maps_toolkit:
   # provider: ^4.0.5
-  provider: 
+  provider:
   # rxdart: ^0.24.0
   rxdart:
   # google_sign_in: ^4.4.4
-  google_sign_in: 
+  google_sign_in:
   #flutter_facebook_login: ^3.0.0
   # http: ^0.12.1
-  #http: 
+  #http:
   # qr_flutter: ^3.2.0
-  qr_flutter: 
+  qr_flutter:
   # firebase_analytics: ^5.0.16
-  firebase_analytics: 
+  firebase_analytics:
   # apple_sign_in: ^0.1.0 #available only for IOS
   # apple_sign_in:
   sign_in_with_apple:
   # geocoder: ^0.2.1
   # geocoder:
-  geocode: 
+  geocode:
   # url_launcher: ^5.5.1
-  url_launcher: 
+  url_launcher:
   # firebase_messaging: ^7.0.0
-  firebase_messaging: 
+  firebase_messaging:
   # expansion_card: ^0.1.0
   expansion_card:
   # qr_code_scanner: ^0.0.13
-  qr_code_scanner: ^1.0.0
+  qr_code_scanner: ^0.7.0
   # animations: ^1.1.2
-  animations: 
+  animations:
   # firebase_database: ^4.1.0
   firebase_database:
   #square_in_app_payments: ^1.5.1
   # google_ml_kit: ^0.0.3+1
-  google_ml_kit: 
-  # sliding_up_panel: ^1.0.2	
-  sliding_up_panel:	
+  google_ml_kit:
+  # sliding_up_panel: ^1.0.2
+  sliding_up_panel:
   # flutter_facebook_auth: ^1.0.2
   flutter_facebook_auth:
-  in_app_purchase: 
+  in_app_purchase:
   #adapty_flutter:
   #firebase_app_check:
   #fake_cloud_firestore:
@@ -99,9 +99,6 @@ dependencies:
   maps_launcher:
   # workmanager:
 
-
-
-  
 # Commented
 # dependency_overrides:
 #   firebase_core: 0.4.4
@@ -111,17 +108,15 @@ dependency_overrides:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  integration_test:           # new
-    sdk: flutter              # new
-  test: ^1.14.4               # new
-
+  integration_test: # new
+    sdk: flutter # new
+  test: ^1.14.4 # new
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
